modified home and test pages

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -25,6 +25,7 @@
     </nav> 
   </div>
   <%= link_to 'About', about_path %>
+  <%= link_to 'Test', test_path %>
   <div id="content">
     <h1 id="hello">Hello..!</h1>
     <em><h2 id="welcome">Welcome to my home page</h2></em>
