--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,4 @@
-<h1> Create an article </h1>
+<h1> Edit existing article </h1>
 
 <% if @article.errors.any? %>
 <h2> The following errors prevented the article from getting created </h2>
@@ -23,7 +23,6 @@
   <p>
     <%= f.submit %>
   </p>
-
 
 <% end %>
 
