Add partials and destroy actions

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -17,7 +17,7 @@
 
 <div class="wrapper">
 
-<%= link_to 'Home', root_path %>
+<%= link_to 'Home', root_path %> |
 <%= link_to 'Test', test_path %>
 
   <div id="links">
