--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,58 +1,6 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-  <title>My Personal Website</title>
+<h1>This is the home page of my blog </h1>
 
-  <link rel="stylesheet" type="text/css" href="..assets/stylesheets/home.css">
-  <!--  <link rel="shortcut icon" type="MIME" href="image/facebook.png"> -->
-</head>
-<body >
-<div id="header">
-  <h1 class="heading">My Personal Website Homepage</h1>
-  <nav id="logo">
-  <!-- <img src="image/logo.png" width="150" height="149" alt="my logo" /> -->
-  </nav>
-</div>
-<div class="wrapper">
-
-  <div id="links">
-    <nav class="nav1">
-        <ul>
-          <li><a href="index.html">Home</a></li> 
-          <li><a href="cv.html">My CV</a></li> 
-          <li><a href="contact.html">Contact Me</a></li> 
-        </ul>
-    </nav> 
-  </div>
-  <%= link_to 'About', about_path %>
+  <%= link_to 'Alpha Blog', articles_path %> |
+  <%= link_to 'About', about_path %> |
   <%= link_to 'Test', test_path %>
-  <div id="content">
-    <h1 id="hello">Hello..!</h1>
-    <em><h2 id="welcome">Welcome to my home page</h2></em>
-    
-    <blockquote>
-      My aim is to be the part of an energetic organization and
-    utilize my knowledge,skills and expertise to
-    contribute towards organization and professional brilliance.</blockquote>
-    <p>I am also willing to learn more with the passage of time from
-    all types of situations and circumstances. If you'd like to meet me, or need more info about me, please email me at <a href="mailto:ok2130308@utg.edu.gm" id="contact">ok2130308@utg.edu.gm</a> or you can just fill the form in my <strong ><a href="contact.html" id="contact">Contact me</a> </strong> page.
-    </p>
-
-    <p>You can also get hold of me on Twitter at <a href="https://twitter.com/@kingoms2"> @kingoms2 </a> and  on <a href="https://www.facebook.com/kingoms1"> Facebook.</a> Thanks!</p>
-  
-  </div>
-
-  <div id="img">
-   <!--  <p > <img src="image\pic.jpg"></p> -->
-  </div>
-
-
-</div>
-
-<div class="footer"> 
-<hr/>
-<p id="bottom"> &copy; Copyright 2015 <a href="index.html">Omar King</a> </p>
-
-</div>
-</body>
-</html>
+ 
