--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,7 +1,7 @@
 <h1> List of all articles </h1>
 
 <p>
-  <%= link_to "Create new article", new_article_path %>
+  <%= link_to "Create new article", new_article_path %> | <%= link_to "Homepage", root_path %>
 </p>
 <table>
   <tr>
@@ -15,7 +15,10 @@
     <td> <%= article.description %> </td>
     <td> <%= link_to "Edit", edit_article_path(article) %> </td>
     <td> <%= link_to "Show", article_path(article) %> </td>
+    <td> <%= link_to "Delete", article_path(article), method: :delete, data: {confirm: "Are you sure?"} %> </td>
   </tr>
   <% end %>
 
 </table>
+
+     
