--- a/app/views/pages/test.html.erb
+++ b/app/views/pages/test.html.erb
@@ -9,5 +9,10 @@
 <%=link_to 'About', about_path %>
 
 <%= image_tag'cake.jpg' %>
+<table>
+<% results = "2993030|F. JOBE:07048601863|ALIEU CAMARA #1:07118451116|FATOU BADJIE" %>
+<% result = results.split(":") %>
+<td><%= puts result%> </td>
+</table>
 </body>
 </html>
